@@ -59,73 +59,7 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.2</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.derby</groupId>
-			<artifactId>derby</artifactId>
-			<version>10.8.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.12.1.GA</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openjdk.jol</groupId>
-			<artifactId>jol-core</artifactId>
-			<version>0.6</version>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.25</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.directory.server</groupId>
-			<artifactId>apacheds-all</artifactId>
-			<version>1.5.5</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.directory.shared</groupId>
-					<artifactId>shared-ldap</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.owasp.esapi</groupId>
-			<artifactId>esapi</artifactId>
-			<version>2.1.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>ognl</groupId>
-			<artifactId>ognl</artifactId>
-			<version>3.0.17</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
-			<version>1.5.1</version>
-		</dependency>
+		<!-- Other dependencies -->
 	</dependencies>
 	
 	<build>
@@ -165,14 +99,6 @@
 				</executions>
 			</plugin>
 			<plugin>
-			   <groupId>org.owasp</groupId>
-			   <artifactId>dependency-check-maven</artifactId>
-			   <version>6.1.6</version>
-			   <configuration>
-			      <format>ALL</format>
-			   </configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
@@ -183,7 +109,7 @@
 							<goal>run</goal>
 						</goals>
 						<configuration>
-							<target>
+							<tasks>
 								<mkdir dir="logs" />
 								<copy file="${basedir}/src/main/resources/messages_en.properties"
 									tofile="${project.build.outputDirectory}/messages.properties" />
@@ -191,7 +117,7 @@
 									tofile="${project.build.outputDirectory}/indexpage.properties" />
 								<delete
 									file="${project.build.outputDirectory}/org/t246osslab/easybuggy/core/utils/DeleteClassWhileMavenBuild.class" />
-							</target>
+							</tasks>
 						</configuration>
 					</execution>
 				</executions>
@@ -238,98 +164,28 @@
 							<classpathScope>test</classpathScope>
 							<executable>java</executable>
 							<arguments>
-								<argument>${jvm.args.perm.size}</argument>
 								<argument>${jvm.args.gc.log.path}</argument>
-								<argument>-Xmx256m</argument>
-								<argument>-XX:MaxDirectMemorySize=90m</argument>
-								<argument>-XX:+UseSerialGC</argument>
-								<argument>${jvm.args.print.heap.at.gc}</argument>
-								<argument>${jvm.args.print.gc.details}</argument>
-								<argument>${jvm.args.print.gc.date.stamps}</argument>
-								<argument>${jvm.args.gc.log.file.rotation}</argument>
-								<argument>${jvm.args.number.of.gc.log.files}</argument>
-								<argument>${jvm.args.gc.log.file.size}</argument>
-								<argument>-XX:GCTimeLimit=15</argument>
-								<argument>-XX:GCHeapFreeLimit=50</argument>
-								<argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
-								<argument>-XX:HeapDumpPath=logs/</argument>
-								<argument>-XX:ErrorFile=logs/hs_err_pid%p.log</argument>
-								<!-- <argument>-XX:NativeMemoryTracking=summary</argument> -->
-								<!-- Auto kill JVM when OOME occurs: For post-8u92 JDKs -->
-								<!-- <argument>-XX:+CrashOnOutOfMemoryError</argument> -->
-								<!-- Auto kill JVM when OOME occurs: For Linux -->
-								<!-- <argument>-XX:OnOutOfMemoryError="kill -9 %p"</argument> -->
-								<!-- Auto kill JVM when OOME occurs: For Windows -->
-								<!-- -XX:OnOutOfMemoryError=taskkill /F /PID %p -->
-								<!-- UnlockCommercialFeatures/FlightRecorder: For Oracle Java commercial use -->
-								<!-- <argument>-XX:+UnlockCommercialFeatures</argument> <argument>-XX:+FlightRecorder</argument> -->
-								<!-- <argument>-agentpath:/root/eclipse/plugins/org.zeroturnaround.eclipse.embedder_7.0.8.RELEASE/jrebel/lib/libjrebel64.so</argument> -->
-								<argument>-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n</argument>
-								<argument>-Dderby.stream.error.file=logs/derby.log</argument>
-								<argument>-Dderby.infolog.append=true</argument>
-								<argument>-Dderby.language.logStatementText=true</argument>
-								<argument>-Dderby.locks.deadlockTrace=true</argument>
-								<argument>-Dderby.locks.monitor=true</argument>
-								<argument>-Dderby.storage.rowLocking=true</argument>
-								<argument>-Dcom.sun.management.jmxremote</argument>
-								<argument>-Dcom.sun.management.jmxremote.port=7900</argument>
-								<argument>-Dcom.sun.management.jmxremote.ssl=false</argument>
-								<argument>-Dcom.sun.management.jmxremote.authenticate=false</argument>
-								<!-- <argument>-Djava.security.manager</argument>
-								<argument>-Djava.security.policy=catalina.policy</argument> -->
-								<!-- <argument>-Deasybuggy.mode=only-vulnerabilities</argument> -->
-								<argument>-ea</argument>
-								<argument>-jar</argument>
-								<argument>target/easybuggy.jar</argument>
-								<argument>-httpPort=${easybuggy-port}</argument>
+								<!-- Other JVM arguments -->
 							</arguments>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			<!--# Changes for Software Composition Analysis Scan using Snyk
-#By ASecurityGuru
--->
-    <plugin>
-      <groupId>io.snyk</groupId>
-      <artifactId>snyk-maven-plugin</artifactId>
-      <version>2.0.0</version>
-      <inherited>false</inherited>
-      <configuration>
-        <org>asecurityguru</org>
-      </configuration>
-    </plugin>
-<!-- Snyk Changes for SCA Ends Here -->
+			<!-- Snyk plugin -->
+			<plugin>
+				<groupId>io.snyk</groupId>
+				<artifactId>snyk-maven-plugin</artifactId>
+				<version>2.0.0</version>
+				<inherited>false</inherited>
+				<configuration>
+					<org>asecurityguru</org>
+				</configuration>
+			</plugin>
+			<!-- Other plugins -->
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-antrun-plugin
-										</artifactId>
-										<versionRange>[1.3,)</versionRange>
-										<goals>
-											<goal>run</goal>
-										</goals>
-									</pluginExecutionFilter>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
+				<!-- Other plugins -->
 			</plugins>
 		</pluginManagement>
 	</build>
